fix scrollbars in datepicker

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,6 +8,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
   cursor: var(--cursor);
+
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #b6b6b6;
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  }
 }
 
 $font-family-base: 'Source Sans Pro';
@@ -148,6 +158,11 @@ input[required] + label:after {
   -moz-appearance: none;
   appearance: none;
   border: 0;
+}
+
+.datepicker-open {
+  overflow: hidden;
+  padding-right: 7px;
 }
 
 @import "~bootstrap/scss/bootstrap";
